fix text align issue in ContentMenu

--- a/src/styles/ui-theme/scss/custom.scss
+++ b/src/styles/ui-theme/scss/custom.scss
@@ -278,7 +278,7 @@ hr {
   padding-top: 90px;
   padding-bottom: 90px;
   box-shadow: 0 5px 50px rgba(0, 0, 0, 0.25);
-  
+
   .block {
     h4 {
       color: $white;
@@ -823,7 +823,6 @@ a[data-action="play-game"] {
 
 #development {
   h2 {
-    text-align: center;
     margin: 40px auto 80px;
   }
 }
